<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresoGasto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ingreso_gasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/ingreso_gasto"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_monto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/monto">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/sp_item"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_descripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/descripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fecha_gasto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fecha_gasto">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_registro_gasto"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_ingreso_gasto" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>