<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaGastos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_consulta_gasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/consulta_gastos"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_item"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fecha_inicio_gasto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fecha_inicio_gastos">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fecha_termino_gasto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fecha_termino_gastos">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_consultar_gasto"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_consultar" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>